Cleaning up code and setting up a preferences framework thing.

--- a/greasemonkey/fogbugz-helper/index.html
+++ b/greasemonkey/fogbugz-helper/index.html
@@ -8,14 +8,15 @@ title: Greasemonkey Scripts - FogBugz Helper
       <h2>Features</h2>
 
       <ul>
+        <li>Added preference for many JS features. More styling features to come.</li>
         <li>Background color picker (in tools menu)</li>
-        <li>Task list: rows can be more than one line (may add a setting for that)</li>
-        <li>Task list: tickets open in a "modal" (will add a close button on tickets, for now you can click the background to close them)</li>
-        <li>Ticket links default to linking to "edit" mode (will make a setting for that)</li>
-        <li>Various styling tweaks to make the page more responsive for smaller windows</li>
-        <li>Tickets: Case description field made larger</li>
+        <li>Task list: rows can be more than one line (TODO: preference)</li>
+        <li>Task list: tickets open in a "modal" (click the background to close them)</li>
+        <li>Ticket links default to linking to "edit" mode</li>
+        <li>Various styling tweaks to make the page more responsive for smaller windows (TODO: preference)</li>
+        <li>Tickets: Case description field made larger (TODO: preference)</li>
         <li>Tickets: Text areas auto expand while typing</li>
-        <li>Tickets: Some ticket spam is hidden, mouse over the "events" to see the full description of the event</li>
+        <li>Tickets: Some ticket spam is hidden, mouse over the "events" to see the full description of the event (TODO: preference)</li>
       </ul>
     </section>
 
