Adding auto sorting setting

--- a/greasemonkey/fogbugz-helper/index.html
+++ b/greasemonkey/fogbugz-helper/index.html
@@ -8,7 +8,8 @@ title: Greasemonkey Scripts - FogBugz Helper
       <h2>Features</h2>
 
       <ul>
-        <li>Added preference for many JS features. More styling features to come.</li>
+        <li>Auto-sorting tickets that arranged by "status" (Fogbugz sorts them in an almost random order)</li>
+        <li>Preferences for many JS features. More styling features to come.</li>
         <li>Background color picker (in tools menu)</li>
         <li>Task list: rows can be more than one line (TODO: preference)</li>
         <li>Task list: tickets open in a "modal" (click the background to close them)</li>
