Preference for making task list info expand

--- a/greasemonkey/fogbugz-helper/index.html
+++ b/greasemonkey/fogbugz-helper/index.html
@@ -15,7 +15,7 @@ title: Greasemonkey Scripts - FogBugz Helper
         <li>Task list: tickets open in a "modal" (click the background to close them)</li>
         <li>Ticket links default to linking to "edit" mode</li>
         <li>Various styling tweaks to make the page more responsive for smaller windows (TODO: preference)</li>
-        <li>Tickets: Case description field made larger (TODO: preference)</li>
+        <li>Tickets: Case description field made larger</li>
         <li>Tickets: Text areas auto expand while typing</li>
         <li>Tickets: Some ticket spam is hidden, mouse over the "events" to see the full description of the event (TODO: preference)</li>
       </ul>
