--- a/greasemonkey/fogbugz-helper/index.html
+++ b/greasemonkey/fogbugz-helper/index.html
@@ -11,13 +11,13 @@ title: Greasemonkey Scripts - FogBugz Helper
         <li>Auto-sorting tickets that arranged by "status" (Fogbugz sorts them in an almost random order)</li>
         <li>Preferences for many JS features. More styling features to come.</li>
         <li>Background color picker (in tools menu)</li>
-        <li>Task list: rows can be more than one line (TODO: preference)</li>
+        <li>Task list: rows can be more than one line</li>
         <li>Task list: tickets open in a "modal" (click the background to close them)</li>
         <li>Ticket links default to linking to "edit" mode</li>
-        <li>Various styling tweaks to make the page more responsive for smaller windows (TODO: preference)</li>
+        <li>Various styling tweaks to make the page more responsive for smaller windows</li>
         <li>Tickets: Case description field made larger</li>
         <li>Tickets: Text areas auto expand while typing</li>
-        <li>Tickets: Some ticket spam is hidden, mouse over the "events" to see the full description of the event (TODO: preference)</li>
+        <li>Tickets: Some ticket spam is hidden, mouse over the "events" to see the full description of the event</li>
       </ul>
     </section>
 
