Adding fake kanban-style feature (work in progress, but useable)

--- a/greasemonkey/fogbugz-helper/index.html
+++ b/greasemonkey/fogbugz-helper/index.html
@@ -8,6 +8,7 @@ title: Greasemonkey Scripts - FogBugz Helper
       <h2>Features</h2>
 
       <ul>
+        <li>Fake kanban-style interface for ticket lists (work in progress)</li>
         <li>Auto-sorting tickets that arranged by "status" (Fogbugz sorts them in an almost random order)</li>
         <li>Preferences for many JS features. More styling features to come.</li>
         <li>Background color picker (in tools menu)</li>
