A little documentation for the reverse comments feature

--- a/greasemonkey/fogbugz-helper/index.html
+++ b/greasemonkey/fogbugz-helper/index.html
@@ -25,6 +25,7 @@ title: Greasemonkey Scripts - FogBugz Helper
         <li>Tickets: Case description field made larger</li>
         <li>Tickets: Text areas auto expand while typing</li>
         <li>Tickets: Some ticket spam is hidden, mouse over the "events" to see the full description of the event</li>
+        <li>Tickets: Reverse order of comments (disabled by default)</li>
       </ul>
 
       <p>To enable/disable features, mouse-over the tools menu in FogBugz:</p>
