Making it a little more obvious what to copy

--- a/greasemonkey/fogbugz-helper/index.html
+++ b/greasemonkey/fogbugz-helper/index.html
@@ -68,7 +68,9 @@ title: Greasemonkey Scripts - FogBugz Helper
     <h2 class="headline"><a href="#script">The Script</a></h2>
 
     <div class="body cms">
-      <textarea>
+      <p>Copy <strong>everything</strong> in the green box:</p>
+
+      <textarea id="user_script">
 // ==UserScript==
 // @name         FogBugz Helper
 // @namespace    http://ziprecruiter.github.io/
