--- a/greasemonkey/fogbugz-helper/index.html
+++ b/greasemonkey/fogbugz-helper/index.html
@@ -15,18 +15,23 @@ title: Greasemonkey Scripts - FogBugz Helper
     <div class="body cms">
       <ul>
         <li>Fake kanban-style interface for ticket lists (work in progress)</li>
-        <li>Auto-sorting tickets that arranged by "status" (Fogbugz sorts them in an almost random order)</li>
-        <li>Preferences for many JS features. More styling features to come.</li>
         <li>Background color picker (in tools menu)</li>
         <li>Task list: rows can be more than one line</li>
-        <li>Task list: tickets open in a "modal" (click the background to close them)</li>
-        <li>Ticket links default to linking to "edit" mode</li>
+        <li class="thumb collapsed"><img src="/greasemonkey/fogbugz-helper/img/new_ui.png" width="1280" height="906"></li>
+
         <li>Various styling tweaks to make the page more responsive for smaller windows</li>
+        <li>Ticket links default to linking to "edit" mode</li>
+        <li>Task list: tickets open in a "modal" (click the background to close them)</li>
         <li>Tickets: Case description field made larger</li>
         <li>Tickets: Text areas auto expand while typing</li>
         <li>Tickets: Some ticket spam is hidden, mouse over the "events" to see the full description of the event</li>
         <li>Tickets: Reverse order of comments (disabled by default)</li>
+        <li class="thumb collapsed"><img src="/greasemonkey/fogbugz-helper/img/new_tickets.png" width="786" height="903"></li>
+
+        <li>Auto-sorting tickets that arranged by "status" (Fogbugz sorts them in an almost random order)</li>
         <li>Hotkeys (work in progress, disabled by default)</li>
+
+        <li>Preferences for many JS features. More styling features to come.</li>
       </ul>
 
       <p>To enable/disable features, mouse-over the tools menu in FogBugz:</p>
