Removing open in modal ticket functionality as it is is now in fogbugz. CSS tweaks. Updating feature description.

--- a/greasemonkey/fogbugz-helper/index.html
+++ b/greasemonkey/fogbugz-helper/index.html
@@ -21,13 +21,13 @@ title: Greasemonkey Scripts - FogBugz Helper
 
         <li>Various styling tweaks to make the page more responsive for smaller windows</li>
         <li>Ticket links default to linking to "edit" mode</li>
-        <li>Task list: tickets open in a "modal" (click the background to close them)</li>
+        <li>Task list: Click the background to close ticket modals</li>
         <li>Tickets: Case description field made larger</li>
         <li>Tickets: Text areas auto expand while typing</li>
         <li>Tickets: Some ticket spam is hidden, mouse over the "events" to see the full description of the event</li>
-        <li>Tickets: Reverse order of comments (disabled by default)</li>
         <li class="thumb collapsed"><img src="/greasemonkey/fogbugz-helper/img/new_tickets.png" width="786" height="903"></li>
 
+        <li>Tickets: Reverse order of comments (disabled by default)</li>
         <li>Auto-sorting tickets that arranged by "status" (Fogbugz sorts them in an almost random order)</li>
         <li>Hotkeys (work in progress, disabled by default)</li>
 
