--- a/greasemonkey/fogbugz-helper/index.html
+++ b/greasemonkey/fogbugz-helper/index.html
@@ -53,7 +53,7 @@ title: Greasemonkey Scripts - FogBugz Helper
       <h3>Chrome</h3>
       <ul>
         <li>Install Tampermonkey (<a href="https://chrome.google.com/webstore/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo?hl=en">https://chrome.google.com/webstore/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo?hl=en</a>)</li>
-        <li>Copy the script below, click the weird square icon with two circles then click "Add new script". Select what's there and paste the script.</li>
+        <li>Copy the script below, click the weird square icon with two circles then click "Add new script". Select what's there and paste the script. Then click the Save button.</li>
       </ul>
 
       <h3>Opera</h3>
