--- a/greasemonkey/fogbugz-helper/index.html
+++ b/greasemonkey/fogbugz-helper/index.html
@@ -30,7 +30,9 @@ title: Greasemonkey Scripts - FogBugz Helper
         <li>Tickets: Reverse order of comments (disabled by default)</li>
         <li>Auto-sorting tickets that arranged by "status" (Fogbugz sorts them in an almost random order)</li>
         <li>Hotkeys (work in progress, disabled by default)</li>
-        <li>Markdown to HTML in comments and case description (disabled by default)</li>
+
+        <li>WYSIWYG editor for Case Description</li>
+        <li>Markdown to HTML in comments and case description</li>
 
         <li>Preferences for many JS features. More styling features to come.</li>
       </ul>
