Updating docs for markdown

--- a/greasemonkey/fogbugz-helper/index.html
+++ b/greasemonkey/fogbugz-helper/index.html
@@ -31,14 +31,14 @@ title: Greasemonkey Scripts - FogBugz Helper
         <li>Auto-sorting tickets that arranged by "status" (Fogbugz sorts them in an almost random order)</li>
         <li>Hotkeys (work in progress, disabled by default)</li>
 
-        <li>WYSIWYG editor for Case Description</li>
+        <li>WYSIWYG editor for Case Description (disabled by default)</li>
         <li>Markdown to HTML in comments and case description</li>
 
         <li>Preferences for many JS features. More styling features to come.</li>
       </ul>
 
       <p>To enable/disable features, mouse-over the tools menu in FogBugz:</p>
-      <p><img src="/greasemonkey/fogbugz-helper/img/tools_dropdown.png" width="350" height="636"></p>
+      <p><img src="/greasemonkey/fogbugz-helper/img/tools_dropdown.png" width="363" height="764"></p>
       <p>Note: some features are disabled by default</p>
     </div>
   </section>
