Adding Safari installation note.

--- a/greasemonkey/fogbugz-helper/index.html
+++ b/greasemonkey/fogbugz-helper/index.html
@@ -68,6 +68,7 @@ title: Greasemonkey Scripts - FogBugz Helper
       <h3>Safari</h3>
       <ul>
         <li>Install Tampermonkey (<a href="https://tampermonkey.net/index.php?ext=dhdg&browser=safari">https://tampermonkey.net/index.php?ext=dhdg&browser=safari</a>)</li>
+        <li>Once installed, you must restart Safari.</li>
         <li>Copy the script below, click the weird square icon with two circles then click "Add new script". Select what's there and paste the script.</li>
       </ul>
     </div>
