Tweaking instruction page styling

--- a/greasemonkey/fogbugz-helper/index.html
+++ b/greasemonkey/fogbugz-helper/index.html
@@ -9,7 +9,7 @@ title: Greasemonkey Scripts - FogBugz Helper
     <a href="#script">The Script</a>
   </nav>
 
-  <section id="features">
+  <section id="features" class="page_section">
     <h2 class="headline"><a href="#features">Features</a></h2>
 
     <div class="body cms">
@@ -43,7 +43,7 @@ title: Greasemonkey Scripts - FogBugz Helper
     </div>
   </section>
 
-  <section id="installing">
+  <section id="installing" class="page_section">
     <h2 class="headline"><a href="#installing">Installation instructions</a></h2>
 
     <div class="body cms">
@@ -74,7 +74,7 @@ title: Greasemonkey Scripts - FogBugz Helper
     </div>
   </section>
 
-  <section id="script">
+  <section id="script" class="page_section">
     <h2 class="headline"><a href="#script">The Script</a></h2>
 
     <div class="body cms">
