Updating Safari instructions

--- a/greasemonkey/fogbugz-helper/index.html
+++ b/greasemonkey/fogbugz-helper/index.html
@@ -75,7 +75,7 @@ title: Greasemonkey Scripts - FogBugz Helper
       <ul>
         <li>Install Tampermonkey (<a href="https://tampermonkey.net/index.php?ext=dhdg&browser=safari">https://tampermonkey.net/index.php?ext=dhdg&browser=safari</a>)</li>
         <li>Once installed, you must restart Safari.</li>
-        <li>Copy the script below, click the weird square icon with two circles then click "Add new script". Select what's there and paste the script.</li>
+        <li>Copy the script below, click the weird square icon with two circles then click "Create new script". Select what's there and paste the script. Click the floppy disk to save.</li>
       </ul>
     </div></div>
   </section>
