Updating FogBugz Helper documentation and some styling tweaks

--- a/greasemonkey/fogbugz-helper/index.html
+++ b/greasemonkey/fogbugz-helper/index.html
@@ -5,9 +5,36 @@ title: Greasemonkey Scripts - FogBugz Helper
 <section class="section">
   <div class="content">
     <nav class="page_nav">
-      <a href="#installing">Installation instructions</a>
+      <a href="#enabling">Enabling FogBugz Customization</a>
+      <a href="#features">Features</a>
+      <a href="#installing">Greasemonkey Installation instructions</a>
     </nav>
   </div>
+
+  <section id="enabling" class="page_section">
+    <h2 class="headline"><div class="content"><a href="#enabling">Enabling FogBugz Customization</a></div></h2>
+
+    <div class="body cms"><div class="content">
+      <ol>
+        <li>
+          <figure>
+            <img src="/greasemonkey/fogbugz-helper/img/enable_fogbugz_customization_1.png" width="233" height="148">
+            <figcaption>
+              Mouseover (or tap on mobile) your avatar in the upper right of a FogBugz page and click "Customizations"
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img src="/greasemonkey/fogbugz-helper/img/enable_fogbugz_customization_2.png" width="469" height="279">
+            <figcaption>
+              Click "Your Available Customizations" then click the value in the "Enabled" column to toggle on/off
+            </figcaption>
+          </figure>
+        </li>
+      </ol>
+    </div></div>
+  </section>
 
   <section id="features" class="page_section">
     <h2 class="headline"><div class="content"><a href="#features">Features</a></div></h2>
@@ -17,15 +44,17 @@ title: Greasemonkey Scripts - FogBugz Helper
         <li>Fake kanban-style interface for ticket lists (work in progress)</li>
         <li>Background color picker (in tools menu)</li>
         <li>Task list: rows can be more than one line</li>
-        <li class="thumb collapsed"><img src="/greasemonkey/fogbugz-helper/img/new_ui.png" width="1280" height="906"></li>
+        <li class="thumb collapsed"><img src="/greasemonkey/fogbugz-helper/img/new_ui.png" width="1269" height="876"></li>
 
         <li>Various styling tweaks to make the page more responsive for smaller windows</li>
         <li>Ticket links default to linking to "edit" mode</li>
         <li>Task list: Click the background to close ticket modals</li>
         <li>Tickets: Case description field made larger</li>
         <li>Tickets: Text areas auto expand while typing</li>
+        <li class="thumb collapsed"><img src="/greasemonkey/fogbugz-helper/img/new_tickets.png" width="797" height="885"></li>
+
         <li>Tickets: Some ticket spam is hidden, mouse over the "events" to see the full description of the event</li>
-        <li class="thumb collapsed"><img src="/greasemonkey/fogbugz-helper/img/new_tickets.png" width="786" height="903"></li>
+        <li class="thumb collapsed"><img src="/greasemonkey/fogbugz-helper/img/ticket_spam.gif" width="673" height="366"></li>
 
         <li>Tickets: Useful buttons added to the top of tickets</li>
         <li class="thumb collapsed"><img src="/greasemonkey/fogbugz-helper/img/ticket_buttons.png" width="252" height="47"></li>
@@ -41,16 +70,19 @@ title: Greasemonkey Scripts - FogBugz Helper
 
         <li>Colorful status indicators</li>
         <li class="thumb collapsed"><img src="/greasemonkey/fogbugz-helper/img/colorful_statuses.png" width="374" height="355"></li>
+
+        <li>More mobile friendly layout</li>
+        <li class="thumb collapsed"><img src="/greasemonkey/fogbugz-helper/img/responsive.png" width="796" height="660"></li>
       </ul>
 
       <p>To enable/disable features, mouse-over the tools menu in FogBugz:</p>
-      <p><img src="/greasemonkey/fogbugz-helper/img/tools_dropdown.png" width="363" height="764"></p>
+      <p><img src="/greasemonkey/fogbugz-helper/img/tools_dropdown.png" width="610" height="863"></p>
       <p>Note: some features are disabled by default</p>
     </div></div>
   </section>
 
   <section id="installing" class="page_section">
-    <h2 class="headline"><div class="content"><a href="#installing">Installation instructions</a></div></h2>
+    <h2 class="headline"><div class="content"><a href="#installing">Greasemonkey Installation instructions</a></div></h2>
 
     <div class="body cms"><div class="content">
       <h3>Firefox</h3>
