Adding a note in docs about markdown and wysiwyg editor

--- a/greasemonkey/fogbugz-helper/index.html
+++ b/greasemonkey/fogbugz-helper/index.html
@@ -51,6 +51,8 @@ title: Greasemonkey Scripts - FogBugz Helper
         <li>Task list: Click the background to close ticket modals</li>
         <li>Tickets: Case description field made larger</li>
         <li>Tickets: Text areas auto expand while typing</li>
+        <li>Tickets: Markdown in Case Summary and plain-text comment fields</li>
+        <li>Tickets: WYSIWYG editor (disabled by default, saves as Markdown)</li>
         <li class="thumb collapsed"><img src="/greasemonkey/fogbugz-helper/img/new_tickets.png" width="797" height="885"></li>
 
         <li>Tickets: Some ticket spam is hidden, mouse over the "events" to see the full description of the event</li>
