adding id's for easier testing

--- a/tabnabber.html
+++ b/tabnabber.html
@@ -9,7 +9,7 @@
 </script>
 
 <script>
-document.write('<p>document.referrer: ' + document.referrer + '</p>');
-document.write('<p><a href="' + document.location.href + '">' + document.location.href + '</a>');
-document.write('<p>window.opener: ' + window.opener + '</p>');
+document.write('<p id="referrer">document.referrer: ' + document.referrer + '</p>');
+document.write('<p id="location"><a href="' + document.location.href + '">' + document.location.href + '</a>');
+document.write('<p id="opener">window.opener: ' + window.opener + '</p>');
 </script>
