Adding tabnab button

--- a/tabnabber.html
+++ b/tabnabber.html
@@ -8,6 +8,8 @@
   superFunJankTime();
 </script>
 
+<button onclick="window.opener='https://google.com'">Make previous window go to Google</button>
+
 <script>
 document.write('<p id="referrer">document.referrer: ' + document.referrer + '</p>');
 document.write('<p id="location"><a href="' + document.location.href + '">' + document.location.href + '</a>');
