--- a/tabnabber.html
+++ b/tabnabber.html
@@ -8,7 +8,7 @@
   superFunJankTime();
 </script>
 
-<button onclick="window.opener='https://google.com'">Make previous window go to Google</button>
+<button onclick="window.opener.location='https://google.com'">Make previous window go to Google</button>
 
 <script>
 document.write('<p id="referrer">document.referrer: ' + document.referrer + '</p>');
