making button easier to click on mobile

--- a/tabnabber.html
+++ b/tabnabber.html
@@ -11,7 +11,7 @@
   superFunJankTime();
 </script>
 
-<button onclick="window.opener.location='https://google.com'">Make previous window go to Google</button>
+<button onclick="window.opener.location='https://google.com'" style="padding: 2em">Make previous window go to Google</button>
 
 <script>
 document.write('<p id="referrer">document.referrer: ' + document.referrer + '</p>');
